--- a/src/App.css
+++ b/src/App.css
@@ -285,7 +285,7 @@ nav {
 .movie__img {
   max-height: 380px;
   transition: all 300ms ease;
-  cursor: not-allowed;
+
   /* Added after tutorial to maintain image aspect ratio */
   object-fit: contain;
   object-position: left;
@@ -310,7 +310,6 @@ nav {
 
 .movie__title:hover {
   text-decoration: underline;
-  cursor: not-allowed;
 }
 
 .movie__ratings {
@@ -403,4 +402,50 @@ nav {
 }
 .contact-info img {
   width: 100%;
+}
+
+/* movie info styling */
+.flex-row-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* movie info styling */
+.movieInfo .header-content {
+  display: none;
+}
+
+.movieInfo .image-container {
+  width: 60%;
+}
+
+.movieInfo .image-container img {
+  width: 100%;
+  max-height: none;
+  padding: 25px;
+}
+.movie__img--wrapper {
+  text-align: center;
+}
+.movie-informaion {
+  width: 40%;
+  padding: 0 15px;
+}
+@media (max-width:768px) {
+  .movieInfo .image-container {
+    width: 100%;
+  }
+}
+
+.movie-informaion h2 {
+  margin-bottom: 40px;
+  font-size: 40px;
+  font-weight: 700;
+}
+.movie-informaion h3 {
+  margin-bottom: 15px;
+}
+.movie-informaion h4 {
+  margin-bottom: 15px;
 }
